Update base workflow to support different releases for each arch

--- a/.github/workflows/alpaquita-base.yml
+++ b/.github/workflows/alpaquita-base.yml
@@ -14,8 +14,16 @@ on:
         description: Version to use
         required: true
         type: string
-      release:
-        description: Release number for this version
+      release-tag:
+        description: Release tag to use
+          required: true
+          type: string
+      release-x64:
+        description: Release to use for x86_64
+        required: true
+        type: string
+      release-aarch64:
+        description: Release to use for aarch64
         required: true
         type: string
 
@@ -45,6 +53,6 @@ jobs:
           file: docker/alpaquita/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: astarivi/alpaquita:${{github.event.inputs.version}}-${{ github.event.inputs.stdlib }}-${{github.event.inputs.release}}
-          build-args: STDLIB=${{ github.event.inputs.stdlib }},VERSION=${{ github.event.inputs.version }},RELEASE=${{ github.event.inputs.release }}
+          tags: astarivi/alpaquita:${{github.event.inputs.version}}-${{ github.event.inputs.stdlib }}-${{github.event.inputs.release-tag}}
+          build-args: STDLIB=${{ github.event.inputs.stdlib }},VERSION=${{ github.event.inputs.version }},RELEASE_X64=${{ github.event.inputs.release-x64 }},RELEASE_AARCH64=${{ github.event.inputs.release-aarch64 }}
 
