--- a/docker/alpaquita/Dockerfile
+++ b/docker/alpaquita/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/busybox:1.37.0-musl AS builder
+FROM docker.io/busybox:1.34.1-glibc AS builder
 
 ARG STDLIB
 ARG VERSION
@@ -15,7 +15,7 @@ RUN ARCH=$(uname -m) && \
     else \
         echo "Unsupported architecture: $ARCH" && exit 1; \
     fi && \
-    wget -O minirootfs.tar.gz https://packages.bell-sw.com/alpaquita/${STDLIB}/${VERSION}/releases/$ARCH/alpaquita-minirootfs-${VERSION}-$RELEASE-${STDLIB}-$ARCH.tar.gz && \
+    wget -O minirootfs.tar.gz http://packages.bell-sw.com/alpaquita/${STDLIB}/${VERSION}/releases/$ARCH/alpaquita-minirootfs-${VERSION}-$RELEASE-${STDLIB}-$ARCH.tar.gz && \
     mkdir /root/rootfs && \
     tar -xzf /root/minirootfs.tar.gz -C /root/rootfs
 
