Use Alpaquita glibc as builder

--- a/docker/alpaquita/Dockerfile
+++ b/docker/alpaquita/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/busybox:1.34.1-glibc AS builder
+FROM docker.io/bellsoft/alpaquita-linux-base:stream-glibc AS builder
 
 ARG STDLIB
 ARG VERSION
@@ -7,7 +7,8 @@ ARG RELEASE_AARCH64
 
 WORKDIR /root
 
-RUN ARCH=$(uname -m) && \
+RUN apk add wget && \
+    ARCH=$(uname -m) && \
     if [ "$ARCH" = "x86_64" ]; then \
         RELEASE="${RELEASE_X64}"; \
     elif [ "$ARCH" = "aarch64" ]; then \
@@ -15,7 +16,7 @@ RUN ARCH=$(uname -m) && \
     else \
         echo "Unsupported architecture: $ARCH" && exit 1; \
     fi && \
-    wget -O minirootfs.tar.gz http://packages.bell-sw.com/alpaquita/${STDLIB}/${VERSION}/releases/$ARCH/alpaquita-minirootfs-${VERSION}-$RELEASE-${STDLIB}-$ARCH.tar.gz && \
+    wget -O minirootfs.tar.gz https://packages.bell-sw.com/alpaquita/${STDLIB}/${VERSION}/releases/$ARCH/alpaquita-minirootfs-${VERSION}-$RELEASE-${STDLIB}-$ARCH.tar.gz && \
     mkdir /root/rootfs && \
     tar -xzf /root/minirootfs.tar.gz -C /root/rootfs
 
