use Busybox to build base image

--- a/docker/alpaquita/Dockerfile
+++ b/docker/alpaquita/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/astarivi/alpaquita:23-glibc-1.0 AS builder
+FROM docker.io/busybox:1.37.0-musl AS builder
 
 ARG STDLIB
 ARG VERSION
@@ -7,8 +7,7 @@ ARG RELEASE_AARCH64
 
 WORKDIR /root
 
-RUN apk add wget && \
-    ARCH=$(uname -m) && \
+RUN ARCH=$(uname -m) && \
     if [ "$ARCH" = "x86_64" ]; then \
         RELEASE="${RELEASE_X64}"; \
     elif [ "$ARCH" = "aarch64" ]; then \
