--- a/.github/workflows/alpaquita-lts.yml
+++ b/.github/workflows/alpaquita-lts.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Get file properties
-        id: image_properties
-        uses: ActionsTools/read-json-action@a421f7cef32511e1dde14b2fba3b0dedc435ee6b
+      - name: Load image JSON properties
+        uses: antifree/json-to-variables@8de3c6b94715a24fe65f29640b4e292a4add22a3
         with:
-          file_path: "docker/alpaquita/src/latest_lts.json"
+          filename: 'docker/alpaquita/src/latest_lts.json'
+          prefix: 'dimage'
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -41,14 +41,14 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            astarivi/alpaquita:${{ steps.image_properties.outputs.version }}-musl-${{ steps.image_properties.outputs.tag }}
-            astarivi/alpaquita:${{ steps.image_properties.outputs.version }}-musl
+            astarivi/alpaquita:${{ env.dimage_version }}-musl-${{ env.dimage_tag }}
+            astarivi/alpaquita:${{ env.dimage_version }}-musl
             astarivi/alpaquita:lts-musl
           build-args: |
             STDLIB=musl
-            VERSION=${{ steps.image_properties.outputs.version }}
-            RELEASE_X64=${{ steps.image_properties.outputs.releases.musl.x86_64.tag }}
-            RELEASE_AARCH64=${{ steps.image_properties.outputs.releases.musl.aarch64.tag }}
+            VERSION=${{ env.dimage_version }}
+            RELEASE_X64=${{ env.dimage_releases_musl_x86_64_tag }}
+            RELEASE_AARCH64=${{ env.dimage_releases_musl_aarch64_tag }}
 
       - name: Build and push glibc
         uses: docker/build-push-action@v6
@@ -58,14 +58,14 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            astarivi/alpaquita:${{ steps.image_properties.outputs.version }}-glibc-${{ steps.image_properties.outputs.tag }}
-            astarivi/alpaquita:${{ steps.image_properties.outputs.version }}-glibc
+            astarivi/alpaquita:${{ env.dimage_version }}-glibc-${{ env.dimage_tag }}
+            astarivi/alpaquita:${{ env.dimage_version }}-glibc
             astarivi/alpaquita:lts-glibc
           build-args: |
             STDLIB=glibc
-            VERSION=${{ steps.image_properties.outputs.version }}
-            RELEASE_X64=${{ steps.image_properties.outputs.releases.glibc.x86_64.tag }}
-            RELEASE_AARCH64=${{ steps.image_properties.outputs.releases.glibc.aarch64.tag }}
+            VERSION=${{ env.dimage_version }}
+            RELEASE_X64=${{ env.dimage_releases_glibc_x86_64_tag }}
+            RELEASE_AARCH64=${{ env.dimage_releases_glibc_aarch64_tag }}
 
       - name: Sync README.md
         uses: meeDamian/sync-readme@70e38f5bc63205951219b8e02afb1d6c1f57fa0a
