--- a/.github/workflows/alpaquita-check.yml
+++ b/.github/workflows/alpaquita-check.yml
@@ -39,6 +39,6 @@ jobs:
         run: |
           git add .
           git commit -m "Updated Alpaquita Linux version"
-          git push origin master
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
