--- a/.github/workflows/alpaquita-stream.yml
+++ b/.github/workflows/alpaquita-stream.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
     paths:
       - docker/alpaquita/src/latest_stream.json
 
